# ARMour

./: CMakeLists.txt  README.md
src/: main.cc
src/encoders/: arm.cc  arm.h  arm_encoder.cc  arm_encoder.cpp  arm_encoder.h  u_encoder.h
src/readers/: file_reader.cc  file_reader.cpp  file_reader.h  memory_reader.cc  memory_reader.h  stream_reader.h
